# network_programming_eighth_semester

./: .gitignore  code_to_file.py  rso-zalik_ukr.odt
Lectures/1/: lect1_ukr.odt
Lectures/10/: lect10_ukr.odt
Lectures/11/: lect11_ukr.odt
Lectures/2/: lect2_ukr.odt
Lectures/3/: lect3_ukr.odt
Lectures/4/: lect4_ukr.odt
Lectures/5/: lect5_ukr.odt
Lectures/6/: lect6_ukr.odt
Lectures/7/: lect7_ukr.odt
Lectures/8/: lect8_ukr.odt
Lectures/9/: lect9_ukr.odt
Lectures/contents/: contents_ukr.odt
Lectures/intro/: intro_ukr.odt
Tasks/1/: task-1_ukr.odt
Tasks/2/: task-2_ukr.odt
Tasks/3/: task-3_ukr.odt
Tasks/4/: task-4_ukr.odt
lab_1/: CMakeLists.txt  main.c  Панченко_Сергій_ІП_11_1.odt
lab_2/: CMakeLists.txt  Makefile  main.c
lab_3/: CMakeLists.txt  Makefile  client  client.c  client.sh  client_utils.h  code.txt  iterative_server  iterative_server.c  iterative_server_utils.c  iterative_server_utils.h  iterative_server_utils_one.h  iterative_server_utils_two.h  parallel_server  parallel_server.c  parallel_server.sh  parallel_server_utils.c  pool_server  pool_server.c  protocol.h  run_client.sh  run_parallel_server.sh  run_pool_server.sh  server.sh  some.c  test_iterative.py  test_parallel.py  test_pool.py  ІП_11_Панченко_3.odt  Панченко_Сергій_ІП_11_3.odt
lab_3/iterative_server_utils/: iterative_server_utils.c
lab_3/iterative_server_utils/iterative_server_utils/: iterative_server_utils.h
lab_3/parallel_server_utils/: parallel_server_utils.c
lab_3/parallel_server_utils/parallel_server_utils/: parallel_server_utils.h
lab_3/protocol/protocol/: protocol.h
lab_4/: CMakeLists.txt  Makefile  async_server.c  client.c  client_utils.h  code.txt  iterative_server.c  multiplex_server  multiplex_server.c  protocol.h  run_client.sh  run_server.sh  server.c  test.py  ІП_11_Панченко_4.odt  Панченко_Сергій_ІП_11_4.odt
